@@ -6,6 +6,7 @@ export(ZTransform)
 export(addCluster)
 export(addContaminantQC)
 export(addDivergence)
+export(addDominant)
 export(addMediation)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
@@ -35,6 +36,7 @@ export(full_join)
 export(getBestDMNFit)
 export(getCrossAssociation)
 export(getDMN)
+export(getDominant)
 export(getExperimentCrossAssociation)
 export(getExperimentCrossCorrelation)
 export(getMediation)
@@ -126,6 +128,7 @@ exportMethods(ZTransform)
 exportMethods(addCluster)
 exportMethods(addContaminantQC)
 exportMethods(addDivergence)
+exportMethods(addDominant)
 exportMethods(addHierarchyTree)
 exportMethods(addMediation)
 exportMethods(addNotContaminantQC)
@@ -159,6 +162,7 @@ exportMethods(full_join)
 exportMethods(getBestDMNFit)
 exportMethods(getCrossAssociation)
 exportMethods(getDMN)
+exportMethods(getDominant)
 exportMethods(getExperimentCrossAssociation)
 exportMethods(getExperimentCrossCorrelation)
 exportMethods(getHierarchyTree)
