@@ -97,6 +97,14 @@
 \alias{getPrevalentTaxa,SummarizedExperiment-method}
 \alias{subsampleCounts}
 \alias{subsampleCounts,SummarizedExperiment-method}
+\alias{addPerSampleDominantFeatures}
+\alias{addPerSampleDominantFeatures,SummarizedExperiment-method}
+\alias{addPerSampleDominantTaxa}
+\alias{addPerSampleDominantTaxa,SummarizedExperiment-method}
+\alias{perSampleDominantFeatures}
+\alias{perSampleDominantFeatures,SummarizedExperiment-method}
+\alias{perSampleDominantTaxa}
+\alias{perSampleDominantTaxa,SummarizedExperiment-method}
 \title{These functions will be deprecated. Please use other functions instead.}
 \usage{
 cluster(x, ...)
@@ -288,6 +296,22 @@ getPrevalentTaxa(x, ...)
 subsampleCounts(x, ...)
 
 \S4method{subsampleCounts}{SummarizedExperiment}(x, ...)
+
+addPerSampleDominantFeatures(x, ...)
+
+\S4method{addPerSampleDominantFeatures}{SummarizedExperiment}(x, ...)
+
+addPerSampleDominantTaxa(x, ...)
+
+\S4method{addPerSampleDominantTaxa}{SummarizedExperiment}(x, ...)
+
+perSampleDominantFeatures(x, ...)
+
+\S4method{perSampleDominantFeatures}{SummarizedExperiment}(x, ...)
+
+perSampleDominantTaxa(x, ...)
+
+\S4method{perSampleDominantTaxa}{SummarizedExperiment}(x, ...)
 }
 \arguments{
 \item{x}{A
