@@ -128,3 +128,5 @@ Changes in version 1.13.x
 + rename getRare* functions to getRare, getUnique* functions to getUnique, 
   getTop* functions to getTop and getPrevalent* functions to getPrevalent
 + Rename subsampleCounts to rarefyAssay
++ Rename perSampleDominant* functions to getDominant and addPerSampleDominant* 
+  functions to addDominant
